--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,38 +1,37 @@
+---
 galaxy_info:
+  role_name: postgresql_tuning
   author: Vitaliy Semochkin
   description: Tunes existing postgresql service (similar to pgtune)
 
   license: GPL-2.0-or-later
 
   min_ansible_version: 2.9
- 
+
   platforms:
-  - name: Fedora
-    versions:
-    - 33
-  
-  - name: EL
-    versions:
-    - 7
-    - 8
-  
-  - name: Debian
-    versions:
-    - buster
-  
-  - name: Ubuntu
-    versions:
-    - focal    
-  
+    - name: Fedora
+      versions:
+        - 33
+
+    - name: EL
+      versions:
+        - 7
+        - 8
+
+    - name: Debian
+      versions:
+        - buster
+
+    - name: Ubuntu
+      versions:
+        - focal
+
   galaxy_tags:
-  - postgres 
-  - postgresql 
-  - pgtune
-  - tunning
-  - db 
-  - database
- 
+    - postgres
+    - postgresql
+    - pgtune
+    - tunning
+    - db
+    - database
+
 dependencies: []
-  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
-  
