--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,22 +1,34 @@
 ---
-#see recommendations at https://web.archive.org/web/20120828112429/https://wiki.postgresql.org/wiki/Number_Of_Database_Connections
-postgresql_calculated_max_connections: "{{(2*ansible_processor_vcpus+postgresql_drive_effective_spindle_count|int)|int}}"
+# see recommendations at
+# https://wiki.postgresql.org/wiki/Number_Of_Database_Connections
+postgresql_calculated_max_connections: >-
+  {{
+   2*ansible_processor_vcpus+postgresql_drive_effective_spindle_count
+  }}
 
-#postgresql_max_connections: "{{postgresql_calculated_max_connections if postgresql_calculated_max_connections < postgresql_min_connections  else postgresql_min_connections}}"
-postgresql_max_connections: "{{ (postgresql_calculated_max_connections|int < postgresql_min_connections) | ternary(postgresql_min_connections,postgresql_calculated_max_connections)|int}}"
+postgresql_max_connections: >-
+  {{
+  (postgresql_calculated_max_connections|int < postgresql_min_connections)
+  |ternary(postgresql_min_connections,postgresql_calculated_max_connections)
+  }}
 
-#An amount of memory the database server uses for shared memory buffers
-#see recommendations at https://www.postgresql.org/docs/current/runtime-config-resource.html#GUC-SHARED-BUFFERS   
+# An amount of memory the database server uses for shared memory buffers
+# see recommendations at
+# https://www.postgresql.org/docs/current/runtime-config-resource.html#GUC-SHARED-BUFFERS
 postgresql_shared_buffers: "{{(ansible_memtotal_mb/4)|round|int}}"
-    
-#Sets the base maximum amount of memory to be used by a query operation (such as a sort or hash table) before writing to temporary disk files. 
-#see http://www.postgresql.org/docs/current/static/runtime-config-resource.html#GUC-WORK-MEM
-#see https://www.enterprisedb.com/postgres-tutorials/how-tune-postgresql-memory
-postgresql_work_mem: "{{(ansible_memtotal_mb/4/postgresql_max_connections|int)|round|int}}"
 
-#maximum amount of memory to be used by maintenance operations ( vacuum, create index, etc)
-#https://www.enterprisedb.com/postgres-tutorials/how-tune-postgresql-memory
+# Sets the base maximum amount of memory to be used by a query operation
+# (such as a sort or hash table) before writing to temporary disk files, see:
+# http://www.postgresql.org/docs/current/static/runtime-config-resource.html#GUC-WORK-MEM
+# https://www.enterprisedb.com/postgres-tutorials/how-tune-postgresql-memory
+postgresql_work_mem: >-
+  {{(ansible_memtotal_mb/4/postgresql_max_connections|int)|round|int}}
+
+# maximum amount of memory to be used by maintenance operations
+# (vacuum, create index, etc)
+# https://www.enterprisedb.com/postgres-tutorials/how-tune-postgresql-memory
 postgresql_maintenance_work_mem: "{{(ansible_memtotal_mb/20)|round|int}}"
 
-#The effective_cache_size parameter estimates how much memory is available for disk caching by the operating system and within the database itself
-postgresql_effective_cache_size : "{{(ansible_memtotal_mb/2)|round|int}}"
+# The estimates how much memory is available for disk caching by the operating
+# system and within the database itself
+postgresql_effective_cache_size: "{{(ansible_memtotal_mb/2)|round|int}}"
